--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,21 @@
   margin: 50px auto;
   width: 300px;
   height: auto;
-  border-radius: 20px;
+  border-radius: 10px;
   background: #5b5a5a;
   color: #fff;
   padding-top: 20px;
   box-shadow: 8px 12px 30px #010000c6;
   font-family: Arial, Helvetica, sans-serif;
   overflow: hidden;
-  border: 1px solid #000;
+  border: 1px solid #505050;
 }
 
 .calculator-screen {
     height: 60px;
     padding: 10px;
     padding-right: 20px;
+    padding-left: 20px;
     display: flex;
     justify-content: end;
     align-content: center;
